src/index.css
/* ... */
/*
=============== 
Modal
===============
*/

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  display: grid;
  place-items: center;
  z-index: -1;
  visibility: hidden;
  opacity: 0;
}

.modal-overlay.show-modal {
  z-index: 10;
  visibility: visible;
  opacity: 1;
  transition-property: opacity;
  transition-duration: 500ms;
}

.modal-container {
  background: var(--clr-white);
  width: 87.2vw;
  border-radius: var(--radius-increased);
  max-width: var(--width-fixed-540);
  text-align: center;
  display: grid;
  place-items: center;
  position: relative;
  top: 2rem;
  box-shadow: var(--shadow);
}

.modal-container.modal-container__application-form {
  height: 66vh;
  max-height: 39rem;
  top: 3.75rem;
}

.modal-container.modal-container__application-form.modal-container__cookie-consent {
  height: 37.5vh;
  max-height: 20rem;
}

.close-modal-btn {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 1.5rem;
  background: transparent;
  border-color: transparent;
  cursor: pointer;
  z-index: 2;
}

.close-modal-btn.close-modal-btn__application-form {
  top: 2.5vh;
}

.close-modal-btn svg path {
  stroke: var(--clr-secondary-active);
}

@media screen and (min-width: 768px) {
  .modal-container.modal-container__application-form {
    max-height: 35rem;
  }

  .modal-container.modal-container__application-form.modal-container__cookie-consent {
    max-height: 9rem;
  }

  .close-modal-btn {
    font-size: 2rem;
  }

  .close-modal-btn.close-modal-btn__application-form {
    top: 1rem;
  }
}

@media screen and (min-width: 992px) {
  .modal-container {
    max-width: unset;
    width: unset;
    box-shadow: unset;
  }

  .modal-container.modal-container__application-form {
    grid-template-columns: 19vw 1fr;
    padding-left: 1rem;
    height: 41.5vw;
    top: 1.875rem;
    max-height: unset;
  }

  .modal-container.modal-container__application-form.modal-container__stripe {
    grid-template-columns: unset;
  }

  .modal-overlay.show-modal {
    background: var(--clr-off-white-text);
  }

  .modal-overlay.show-modal.modal-overlay__cookie-consent {
    background: rgba(0, 0, 0, 0.5);
  }
}

/*
=============== 
Contact Form Modal
===============
*/

.form {
  width: 87.2vw;
  max-width: var(--width-fixed-540);
  background: var(--white);
  border-radius: var(--borderRadius);
  box-shadow: var(--shadow-2);
  padding: 3vh 1.5rem 0;
  margin: 3vh auto 1vh;
}

.form .fixed-height {
  height: 48vh;
  max-height: 22rem;
}

.form .fixed-height+div {
  margin-top: 1vh;
}

.form-input,
.form-textarea {
  width: 100%;
  padding: 0.775rem 0.75rem 0.775rem 1.125rem;
  border-radius: var(--radius-input);
  border: 1px solid var(--grey-300);
  font-size: 0.775rem;
  line-height: 1.86;
  font-family: var(--ff-primary);
  color: var(--grey-400);
  font-weight: var(--fw-600);
}

.form-input.form-input__select {
  padding-top: .875rem;
  padding-bottom: .875rem;
}

.form-input.form-input__date {
  padding-top: .7125rem;
  padding-bottom: .7125rem;
}

.form-input.label-q {
  padding-bottom: .5rem;
}

.form-input.label-q.label-q__availability {
  padding: 0 0 1.5vh
}

.form-input.form-input__select>div {
  margin-right: 0;
}

.form-input::placeholder,
.form-textarea::placeholder {
  color: var(--clr-light-grey);
  font-weight: var(--fw-400);
}

.form-input:focus-visible,
.form-textarea:focus-visible {
  outline-color: var(--clr-primary-5);
}

.form-row {
  margin-bottom: .75rem;
  position: relative;
}

.form-row.form-row__requirements {
  margin-bottom: 1.5rem;
}

.form-row.form-row__additional-requirements {
  margin-bottom: .75rem;
}

.form-textarea {
  height: 7rem;
}

::placeholder {
  font-family: inherit;
  color: var(--grey-400);
}

.form-alert {
  color: var(--red-dark);
  letter-spacing: var(--letterSpacing);
  text-transform: capitalize;
}

/* extra styles */
.form .form-label {
  position: absolute;
  top: calc(50% - 15px);
  left: 1.213125rem;
  font-size: 0.75rem;
  padding: 0.25rem 0.725rem;
  background: var(--clr-secondary);
}

.form .btn-block {
  margin-top: 0.5rem;
}

.modal-footer {
  margin-left: 11.9266%;
  margin-right: 11.9266%;
  padding-bottom: 4px;
}

.modal-footer-text {
  color: var(--clr-grey-muted);
  font-size: 12px;
  line-height: 1.91;
  font-weight: var(--fw-500);
}

.modal-footer-text span {
  font-weight: var(--fw-700);
  color: var(--clr-secondary);
}

.modal-footer-text.modal-footer-text__application-form span {
  font-weight: var(--fw-600);
  color: var(--grey-400);
}

.form.form__cookies {
  margin-bottom: 3vh;
  margin-top: 1vh;
}

.para__learn-more {
  margin-top: 1.5rem;
}

.link__learn-more {
  display: none;
}
/* ... */

